--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -23,7 +23,8 @@
 
 <div class="ui grid posts">
   <app-article>
-
+    *ngFor="let article of sortedArticles()"
+    [article]="article">
   </app-article>
 </div>
 
