Fix it Multiples Articulos-57

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,11 +22,9 @@
 </form>
 
 <div class="ui grid posts">
-  <app-article>
-    *ngFor="let article of sortedArticles()"
+
+  <app-article
+    *ngFor="let article of articles"
     [article]="article">
   </app-article>
 </div>
-
-
-
