--- a/src/app/article/article.component.html
+++ b/src/app/article/article.component.html
@@ -25,7 +25,7 @@
       </a>
     </li>
     <li class="item">
-      <a <!--href(click)="voteDown()"-->>
+      <a href (click)="voteDown()">
         <i class="arrow down icon"></i>
         downvote
       </a>
